hphp/hack/test/typecheck/function_pointer/simple_function_pointer_targs_bad_mismatch.php.exp
File "simple_function_pointer_targs_bad_mismatch.php", line 7, characters 8-10:
Expected a type parameter (Typing[4029])
File "simple_function_pointer_targs_bad_mismatch.php", line 3, characters 10-12:
Definition is here
