hphp/hack/test/typecheck/function_pointer/simple_function_pointer_targs_bad_mismatch.php
<?hh

function foo<T>(T $arg): void {
}

function test(): void {
  $x = foo<int, int>;
  $x(4);
}
